--- a/src/app/modules/to-do-list/pages/list/list.component.html
+++ b/src/app/modules/to-do-list/pages/list/list.component.html
@@ -15,7 +15,7 @@
                    id="inputValue"
                    autofocus />
 
-            <button class="btn btn-primary"
+            <button class="btn btn-primary-circle"
                     title="Adicionar um novo item"></button>
         </label>
     </div>
