feat: Capturing values of added items

--- a/src/app/modules/to-do-list/pages/list/list.component.html
+++ b/src/app/modules/to-do-list/pages/list/list.component.html
@@ -3,20 +3,13 @@
          alt="Sua lista de tarefas está vazia - imagem ilustrativa"
          loading="eager">
 
-    <button class="btn btn-primary">
+    @if (addItem()) {
+    <button class="btn btn-primary"
+            (click)="addItem.set(false)">
         Crie uma lista de tarefas
     </button>
-
-    <div>
-        <label class="input-label-text"
-               for="inputValue">
-            <input type="text"
-                   placeholder="Adicione um novo item"
-                   id="inputValue"
-                   autofocus />
-
-            <button class="btn btn-primary-circle"
-                    title="Adicionar um novo item"></button>
-        </label>
-    </div>
+    }
+    @else {
+    <app-input-add-item />
+    }
 </div>
