--- a/src/app/modules/to-do-list/pages/list/list.component.scss
+++ b/src/app/modules/to-do-list/pages/list/list.component.scss
@@ -12,7 +12,7 @@
         flex-direction: column;
 
         .btn-primary,
-        div {
+        app-input-add-item {
             margin-top: 30px;
             width: 100%;
         }
