feat: saving list data to localstorage

--- a/src/app/modules/to-do-list/pages/list/list.component.html
+++ b/src/app/modules/to-do-list/pages/list/list.component.html
@@ -10,6 +10,6 @@
     </button>
     }
     @else {
-    <app-input-add-item />
+    <app-input-add-item (outputAddListItem)="getInputAndAddItem($event)" />
     }
 </div>
