--- a/src/app/modules/to-do-list/components/input-add-item/input-add-item.component.html
+++ b/src/app/modules/to-do-list/components/input-add-item/input-add-item.component.html
@@ -1,15 +1,29 @@
-<div>
-       <label class="input-label-text"
-              for="inputValue">
-              <input type="text"
-                     placeholder="Adicione um novo item"
-                     id="inputValue"
-                     autofocus
-                     (keyup.enter)="focusAndAddItem(inputText.value)"
-                     #inputText />
+<header [ngClass]="{
+       'has-items': inputListItems.length
+}">
 
-              <button class="btn btn-primary-circle"
-                      (click)="focusAndAddItem(inputText.value)"
-                      title="Adicionar um novo item"></button>
-       </label>
-</div>
+       @if (inputListItems.length) {
+       <h1>Minha Lista</h1>
+       }
+
+       <div [ngClass]="{
+              'container': inputListItems.length
+       }">
+              <label class="input-label-text"
+                     for="inputValue"
+                     [ngClass]="{
+                            'remove-margin-bottom': !inputListItems.length
+                     }">
+                     <input type="text"
+                            placeholder="Adicione um novo item"
+                            id="inputValue"
+                            autofocus
+                            (keyup.enter)="focusAndAddItem(inputText.value)"
+                            #inputText />
+
+                     <button class="btn btn-primary-circle"
+                             (click)="focusAndAddItem(inputText.value)"
+                             title="Adicionar um novo item"></button>
+              </label>
+       </div>
+</header>
