--- a/src/app/modules/to-do-list/pages/list/list.component.html
+++ b/src/app/modules/to-do-list/pages/list/list.component.html
@@ -21,10 +21,22 @@
                     (outputAddListItem)="getInputAndAddItem($event)" />
 
 <main class="container">
+
+    @if (listItemsStage('pending').length) {
+    <h2>Pendências</h2>
+    <app-input-list-item [inputListItems]="listItemsStage('pending')" />
+    }
+
+    @if (listItemsStage('completed').length) {
+    <h2>Concluídas</h2>
+    <app-input-list-item [inputListItems]="listItemsStage('completed')" />
+    }
+
 </main>
 
 <footer>
-    <button class="btn btn-danger" (click)="deleteAllItems()">
+    <button class="btn btn-danger"
+            (click)="deleteAllItems()">
         Deletar todos os itens
     </button>
 </footer>
