--- a/src/app/modules/to-do-list/components/input-list-item/input-list-item.component.html
+++ b/src/app/modules/to-do-list/components/input-list-item/input-list-item.component.html
@@ -2,18 +2,19 @@
 <label class="input-label-text"
        [for]="item.checked">
 
-    <input type="checkbox"
-           #inputCheckbox
-           [checked]="item.checked" />
-    <input type="text"
-           #inputValue
-           [id]="item.id"
-           [value]="item.value"
-           placeholder="Adicione um valor"
-           autofocus />
+       <input type="checkbox"
+              #inputCheckbox
+              [checked]="item.checked"
+              (input)="updateItemCheckbox(item.id, inputCheckbox.checked)" />
+       <input type="text"
+              #inputValue
+              [id]="item.id"
+              [value]="item.value"
+              placeholder="Adicione um valor"
+              autofocus />
 
-    <button class="btn btn-danger-circle"
-            title="Delete este item"></button>
+       <button class="btn btn-danger-circle"
+               title="Delete este item"></button>
 </label>
 
 }
