--- a/src/app/modules/to-do-list/pages/list/list.component.html
+++ b/src/app/modules/to-do-list/pages/list/list.component.html
@@ -24,12 +24,14 @@
 
     @if (listItemsStage('pending').length) {
     <h2>Pendências</h2>
-    <app-input-list-item [inputListItems]="listItemsStage('pending')" />
+    <app-input-list-item [inputListItems]="listItemsStage('pending')"
+                         (outputUpdateItemcheckbox)="updateItemCheckbox($event)" />
     }
 
     @if (listItemsStage('completed').length) {
     <h2>Concluídas</h2>
-    <app-input-list-item [inputListItems]="listItemsStage('completed')" />
+    <app-input-list-item [inputListItems]="listItemsStage('completed')"
+                         (outputUpdateItemcheckbox)="updateItemCheckbox($event)" />
     }
 
 </main>
