feat: deleting item from list

--- a/src/app/modules/to-do-list/components/input-list-item/input-list-item.component.html
+++ b/src/app/modules/to-do-list/components/input-list-item/input-list-item.component.html
@@ -11,9 +11,11 @@
               [id]="item.id"
               [value]="item.value"
               placeholder="Adicione um valor"
-              autofocus />
+              autofocus
+              (input)="updateItemText(item.id, inputValue.value)" />
 
        <button class="btn btn-danger-circle"
+               (click)="deleteItemText(item.id)"
                title="Delete este item"></button>
 </label>
 
