--- a/src/app/modules/to-do-list/pages/list/list.component.html
+++ b/src/app/modules/to-do-list/pages/list/list.component.html
@@ -25,13 +25,17 @@
     @if (listItemsStage('pending').length) {
     <h2>Pendências</h2>
     <app-input-list-item [inputListItems]="listItemsStage('pending')"
-                         (outputUpdateItemcheckbox)="updateItemCheckbox($event)" />
+                         (outputUpdateItemcheckbox)="updateItemCheckbox($event)"
+                         (outputUpdateItemtext)="updateItemText($event)"
+                         (outputDeleteItem)="deleteItem($event)" />
     }
 
     @if (listItemsStage('completed').length) {
     <h2>Concluídas</h2>
     <app-input-list-item [inputListItems]="listItemsStage('completed')"
-                         (outputUpdateItemcheckbox)="updateItemCheckbox($event)" />
+                         (outputUpdateItemcheckbox)="updateItemCheckbox($event)"
+                         (outputUpdateItemtext)="updateItemText($event)"
+                         (outputDeleteItem)="deleteItem($event)" />
     }
 
 </main>
